# MediaLibManager

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  _appl_server.py  _player_server.py  conftest.py  docker prep.txt  docker-compose.yml  myMediaLib_adm.py  myMediaLib_controller.py  myMediaLib_init.py  myMediaLib_model.py  mymedialib.cfg  pyproject.toml  requirements.txt  run_medialib.py  setup.py  sql_app.db3
config/: mymedialib.cfg
medialib/: Dockerfile  _appl_server.py  _task_dispatcher.py  main.py  myMediaLib_CONST.py  myMediaLib_adm.py  myMediaLib_controller.py  myMediaLib_cue.py  myMediaLib_fp_tools.py  myMediaLib_fs_util.py  myMediaLib_init.py  myMediaLib_model.py  myMediaLib_mpd.py  myMediaLib_scheduler.py  myMediaLib_tools.py  myMedialib_view.py  setup.py  worker.py
templates/: admin_page.tmpl  artist_edit_form.tmpl  base_template.tmpl  bookmarks.tmpl  cast_page.tmpl  cntrl_main_lists.tmpl  command_routing.rtg  debug_page.tmpl  gen_if_js_elem.tmpl  graf_page.tmpl  image_page.tmpl  info.tmpl  info_page.tmpl  main_page.tmpl  old_cast_player.tmpl  player_buttons.tmpl  report_part.tmpl  reports_page.tmpl  restart_page.tmpl  scrpt_1.search.tmpl  scrpt_main.tmpl  search_album_image_table_row.tmpl  search_album_image_table_row_first.tmpl  search_page.tmpl  search_page_new.tmpl  search_part.tmpl  search_part_image.tmpl  search_part_new.tmpl  search_res_table_row.tmpl  search_res_table_row_album.tmpl  search_res_table_row_artist.tmpl  tag_adm_page.tmpl  tag_adm_part.tmpl  templates.cfg  track_preload_page.tmpl
test/: fp_gen_monitor.py  run_res_gen.py  (+4 more)
(+59 files in other folders)
