[tool.poetry]
name = "MedialibManager"
version = "2.9.7"
description = "Audio media manager"
authors = ["Igor Izhov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mutagen = "^1.45.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"