[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name='MediaLibManager'
version='2.9.10'
description='Music metadata managing, navigation and playing Service'


dependencies = [
    "mutagen",
    "chardet"

]

[tool.setuptools.packages.find]
include = ["medialib"]  # package names should match these glob patterns (["*"] by default)


